Wrap elements in #webpage page wrap & fix footer to the bottom

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,7 +2,7 @@
 
 body {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	margin: 0 auto;
 }
 
@@ -19,6 +19,10 @@ body {
   --slate: #272727;
 }
 
+#webpage {
+	min-height: 100vh;
+	position: relative;
+}
 
 /* Navigation Menu */
 
@@ -128,6 +132,7 @@ ul {
 	justify-content: center;
 	flex-direction: column;
 	border: 3px dotted gold;
+	padding-bottom: 2.5rem; /* same as footer height */
 }
 
 #welcome {
@@ -155,8 +160,9 @@ ul {
 
 footer {
   width: 100%;
+  height: 2.5rem;
   bottom: 0;
-/*   position: fixed; */
+  position: absolute;
 }
 
 #footer{
